src/main/java/com/example/chuchu/common/errors/exception/UnauthorizedException.java
package com.example.chuchu.common.errors.exception;

public class UnauthorizedException extends RuntimeException {

    public UnauthorizedException(String message) {
        super(message);
    }

    public UnauthorizedException(String message, Throwable cause) {
        super(message, cause);
    }

}
